resources/yaml/kyverno.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "kyverno"
  annotations: {}
  name: "kyverno-svc"
  labels:
    app: "kyverno"
    nirmata.io/component: "kyverno"
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  type: "ClusterIP"
  selector:
    app: "kyverno"
    nirmata.io/component: "kyverno"
  ports:
  - port: 443
    targetPort: 443

---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  namespace: "kyverno"
  annotations: {}
  name: "kyverno"
  labels:
    app: "kyverno"
    nirmata.io/component: "kyverno"
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: "kyverno"
      nirmata.io/component: "kyverno"
    matchExpressions: []
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations: {}
      labels:
        app: "kyverno"
        nirmata.io/application.addon.type: "Security"
        nirmata.io/application.type: "cluster-addon"
        nirmata.io/component: "kyverno"
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      serviceAccountName: "kyverno-service-account"
      containers:
      - name: "kyverno"
        image: "nirmata/kyverno:v1.1.2"
        command: []
        args:
        - "--filterK8Resources=[Event,*,*][*,kube-system,*][*,kube-public,*][*,kube-node-lease,*][Node,*,*][APIService,*,*][TokenReview,*,*][SubjectAccessReview,*,*][*,kyverno,*]"
        ports:
        - containerPort: 443
          protocol: "TCP"
