resources/yaml/require-pod-requests-limits.yaml
---
apiVersion: "kyverno.io/v1"
kind: "ClusterPolicy"
metadata:
  annotations:
    policies.kyverno.io/category: "Workload Management"
    policies.kyverno.io/description: "As application workloads share cluster resources,\
      \ it is important to limit resources requested and consumed by each pod. It\
      \ is recommended to require 'resources.requests' and 'resources.limits' per\
      \ pod. If a namespace level request or limit is specified, defaults will automatically\
      \ be applied to each pod based on the 'LimitRange' configuration."
  uid: null
  selfLink: null
  resourceVersion: null
  creationTimestamp: null
  deletionTimestamp: null
  namespace: null
  name: "require-pod-requests-limits"
  labels: {}
spec:
  validationFailureAction: "audit"
  background: null
  rules:
  - name: "validate-resources"
    validate:
      message: "CPU and memory resource requests and limits are required"
      pattern:
        spec:
          containers:
          - resources:
              requests:
                memory: "?*"
                cpu: "?*"
              limits:
                memory: "?*"
                cpu: "?*"
      anyPattern: null
    match:
      roles: []
      clusterRoles: []
      resources:
        kinds:
        - "Pod"
        name: null
        namespace: []
        selector: null
